# cargo-outdated

./: Cargo.toml
src/: main.rs
src/cargo_ops/: elaborate_workspace.rs  mod.rs  temp_project.rs
