[package]
name = "cargo-outdated"
version = "0.15.0"
authors = [
    "Kevin K. <kbknapp@gmail.com>",
    "Frederick Z. <frederick888@tsundere.moe>",
    "Ricky H. <ricky.hosfelt@gmail.com>",
]
categories = ["development-tools", "development-tools::cargo-plugins"]
edition = "2021"
exclude = ["*.png"]
keywords = [
    "cargo",
    "subcommand",
    "dependencies",
    "cargo-subcommand",
    "deps",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kbknapp/cargo-outdated.git"
description = "Cargo subcommand for displaying when dependencies are out of date"

[[bin]]
name = "cargo-outdated"

[dependencies]
anyhow = "1.0"
cargo = ">=0.82,<1"
env_logger = ">=0.11,<1"
git2-curl = ">=0.20,<1"
semver = "1.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tabwriter = "1.4"
tempfile = "3.13"
toml = ">=0.8,<1"
clap = { version = "4.5", features = ["derive"] }
strum = { version = ">=0.26,<1", features = ["derive"] }

[features]
debug = []
vendored-openssl = ["cargo/vendored-openssl"]
default = []

[profile.release]
lto = true

[dev-dependencies]
pretty_assertions = "1.4"
